@@ -1,6 +1,7 @@
 package com.deligo.Frontend.Controllers.Employee.Admin;
 
 import com.deligo.DatabaseManager.dao.GenericDAO;
+import com.deligo.Frontend.Controllers.InitializableWithParent;
 import com.deligo.Frontend.Controllers.MainPage.MainPageController;
 import com.deligo.Model.OrgDetails;
 import com.deligo.Model.User;
@@ -17,7 +18,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.ResourceBundle;
 
-public class OrgDetailsViewController implements Initializable {
+public class OrgDetailsViewController implements InitializableWithParent {
 
     @FXML private Label phoneLabel;
     @FXML private Label emailLabel;
@@ -27,28 +28,41 @@ public class OrgDetailsViewController implements Initializable {
     private MainPageController mainPageController;
     private final GenericDAO<OrgDetails> orgDAO = new GenericDAO<>(OrgDetails.class, "info_board");
 
-
     private static final Map<String, Integer> DAY_ROW = Map.of(
             "monday", 0, "tuesday", 1, "wednesday", 2,
             "thursday", 3, "friday", 4, "saturday", 5, "sunday", 6
     );
 
-    public OrgDetailsViewController(MainPageController mainPageController) {
-        this.mainPageController = mainPageController;
-    }
-
     @Override
-    public void initialize(URL location, ResourceBundle resources) {
-//        String json = mainPageController.getServer().sendGetRequest("/be/info");
-//        List<OrgDetails> orgDetails = orgDAO.getAll();
+    public void initializeWithParent(Object parentController) {
+        this.mainPageController = (MainPageController) parentController;
 
-//        OrgDetails details = orgDetails.get(0);
-        OrgDetails details = new OrgDetails();
+        String json = mainPageController.getServer().sendGetRequest("/be/info");
+        List<OrgDetails> orgDetails = orgDAO.getAll();
+
+        OrgDetails details = orgDetails.getFirst();
+        if (details == null) {
+            System.err.println("Chýbajúce alebo prázdne orgDetails!");
+            return;
+        }
+//        OrgDetails details = new OrgDetails();
 
         phoneLabel.setText("Tel. číslo: " + details.getPhoneNumber());
         emailLabel.setText("Email: " + details.getMail());
 
-        JsonObject hoursJson = JsonParser.parseString(details.getOpeningTimes()).getAsJsonObject();
+        String openingTimes = details.getOpeningTimes();
+        if (openingTimes == null || openingTimes.isEmpty()) {
+            System.err.println("Chýbajúce alebo prázdne openingTimes!");
+            return;
+        }
+
+        JsonObject hoursJson;
+        try {
+            hoursJson = JsonParser.parseString(openingTimes).getAsJsonObject();
+        } catch (Exception e) {
+            e.printStackTrace();
+            return;
+        }
 
         for (Map.Entry<String, Integer> entry : DAY_ROW.entrySet()) {
             String day = entry.getKey();
@@ -64,8 +78,8 @@ public class OrgDetailsViewController implements Initializable {
                     new Label(close)
             );
         }
-    }
 
+    }
     private String capitalize(String text) {
         return text.substring(0, 1).toUpperCase() + text.substring(1);
     }
